package fr.imie.malah.abstractfactory.factory;

public enum FactoryEnum {
    COLOR,
    SHAPE
}
