package fr.imie.malah.abstractfactory.factory;

public enum SelectColor {
    RED,
    GREEN,
    BLUE
}
