package fr.imie.malah.abstractfactory.factory;

public enum SelectShape {
    RECTANGLE,
    SQUARE,
    CIRCLE
}
