package fr.imie.malah.abstractfactory.model;

public class Blue extends Color {

    public Blue() {
        super("blue");
    }

}
