package fr.imie.malah.abstractfactory.model;

public class Circle extends Shape {

    public Circle() {
        super("circle");
    }
}
