package fr.imie.malah.abstractfactory.model;

public class Green extends Color {

    public Green() {
        super("green");
    }

}
