package fr.imie.malah.abstractfactory.model;

public class Rectangle extends Shape {

    public Rectangle() {
        super("rectangle");
    }
    
}
