package fr.imie.malah.abstractfactory.model;

public class Red extends Color {

    public Red() {
        super("red");
    }

}
