package fr.imie.malah.abstractfactory.model;

public class Square extends Shape {

    public Square() {
        super("square");
    }

}
